# odh-ide-extensions

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .stylelintrc.json  CLAUDE.md  CONTRIBUTING.md  Makefile  OWNERS  README.md  codecov.yml  eslint.config.cjs  eslint.config.mjs  lint_requirements.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: binder-on-pr.yml  build.yml  build_all_extensions.yml  build_extension.yml  build_extension_caller.yml  odh-notebooks-sync.yml  trash-cleanup-release.yml
binder/: environment.yml  postBuild
docs/: ARCHITECTURE.md
odh-jupyter-trash-cleanup/: .flake8  .gitignore  CHANGELOG.md  README.md  conftest.py  jest.config.js  junit.xml  package.json  pyproject.toml  setup.py  tsconfig.test.json
odh-jupyter-trash-cleanup/binder/: environment.yml  postBuild
odh-jupyter-trash-cleanup/odh_jupyter_trash_cleanup/: __init__.py  handlers.py  log.py  test_empty_trash.py  trash.py
odh-jupyter-trash-cleanup/odh_jupyter_trash_cleanup/tests/: test_handlers.py  test_log.py  test_trash.py
odh-jupyter-trash-cleanup/src/: TrashEmptyResponse.ts  emptyTrashCommand.ts  handler.ts
odh-jupyter-trash-cleanup/src/__tests__/: ITrashEmptyResponse.spec.ts  TrashIcon.spec.ts  emptyTrashCommand.spec.ts  handler.spec.ts  odh_jupyter_trash_cleanup.spec.ts
odh-jupyter-trash-cleanup/ui-tests/: README.md  global-teardown.js  jupyter_server_test_config.py  package.json  playwright.config.js
odh-jupyter-trash-cleanup/ui-tests/tests/: odh_jupyter_trash_cleanup.spec.ts
testdata/: README.md  empty_trash_state.json  sample_error_response.json  sample_trash_files.json  sample_trash_response.json
testdata/api_responses/: empty_result.json  error.json  success.json
